contrast error fix

--- a/css/cart-styles.css
+++ b/css/cart-styles.css
@@ -66,7 +66,7 @@
   padding: 10px 20px;
   font-size: 1.2em;
   text-decoration: none;
-  background-color: #27ae60;
+  background-color: #b22dc9;
   color: white;
   border: none;
   border-radius: 5px;
@@ -74,7 +74,7 @@
 }
 
 .col-last .checkout-button:hover {
-  background-color: #219e49;
+  background-color: #de35ff;
 }
 
 /* Add margin to the bottom of the checkout button and subtotal */
